[package]
name = "gallery"
version = "0.1.0"
authors = ["CherryGS <tickten@outlook.com>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
] }
log = "0.4"
env_logger = "0.10"
walkdir = "2"
rfd = { version = "*" }
# tokio = { version = "1.30.0", features = ["full"] }
# parking_lot = "0.12"
# serde = { version = "1", features = ["derive"] }
# rayon = "1.7"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
